# eurorack

./: .gitignore  .gitmodules  CMakeLists.txt
marbles/: CMakeLists.txt  clock_self_patching_detector.h  cv_reader.cc  cv_reader.h  cv_reader_channel.h  io_buffer.h  marbles.cc  resources.cc  resources.h  scale_recorder.h  settings.cc  settings.h  ui.cc  ui.h
marbles/bootloader/: bootloader.cc
marbles/drivers/: adc.cc  adc.h  clock_inputs.cc  clock_inputs.h  dac.cc  dac.h  debug_pin.h  debug_port.h  gate_outputs.h  leds.cc  leds.h  rng.h  switches.cc  switches.h  system.cc  system.h
marbles/ramp/: ramp.h  ramp_divider.h  ramp_extractor.cc  ramp_extractor.h  slave_ramp.h
marbles/random/: discrete_distribution_quantizer.cc  discrete_distribution_quantizer.h  distributions.h  lag_processor.cc  lag_processor.h  output_channel.cc  output_channel.h  quantizer.cc  quantizer.h  random_generator.h  random_sequence.h  random_stream.h  t_generator.cc  t_generator.h  x_y_generator.cc  x_y_generator.h
